# gsoc2021-hashesDB

./: .gitignore  README.md  commands.txt  database_schema.txt  pyproject.toml  requirements.txt
docs/: commands_draft.txt  project_notes.txt  schema_documentation.txt  schema_draft.txt
src/: app.py  create.py  db.py  importing.py  initialize_database.py  output.py  parser.py  scan.py  subcommands.py  table_classes.py
test/: run_tests.py
test/app_tests/: not_hashes_db.db  test_app.py
test/compare_tests/: test_compare.py
test/create_tests/: extra_column_test.db  mytest.db  rename_column_test.db  test_create.py
test/export_tests/: test_export.py
test/hf_tests/: test_hf.py
test/import_db_tests/: mytest.db  test_import_db.py
test/importing_tests/: HASH.csv  test_importing.py
test/misc_db_tests/: test_misc_db.py
test/output_tests/: OUTPUT.json  OUTPUT.xml  test_output.py
test/scan_tests/: mytest.db  test_scan.py
test/search_duplicates_tests/: test_search_duplicates.py
test/search_tests/: test_search.py
test/sql_tests/: mytest.db  test_sql.py
tests/: mytest.db
tests/compare_tests/: mytest.db
tests/create_tests/: mytest.db  test_create.py
tests/export_tests/: test_export.py
tests/hf_tests/: test_hf.py
tests/import_db_tests/: test_import_db.py
tests/importing_tests/: test_importing.py
tests/misc_db_tests/: test_misc_db.py
tests/output_tests/: OUTPUT.csv  OUTPUT.tsv  OUTPUT.txt  OUTPUT.yaml  test_output.py
tests/search_duplicates_tests/: test_search_duplicates.py
tests/sql_tests/: mytest.db  test_sql.py
(+46 files in other folders)
