[project]
name = "hashesdb"
version = "0.9py"
description = "Tools to create, maintain, and search a database of hashes of files."
readme = "README.md"
requires-python = ">=3.6.9"
license = {file = "LICENSE"}
keywords = ["hashes", "fuzzy", "fuzzy hashing", "hashesdb"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
  "attrs==21.2.0",
  "attrs-strict==0.2.1",
  "certifi==2021.5.30",
  "cffi==1.14.6",
  "charset-normalizer==2.0.4",
  "click==8.0.1",
  "Deprecated==1.1.5",
  "dicttoxml==1.7.4",
  "dulwich==0.20.24",
  "greenlet==1.1.1",
  "hypothesis==6.14.6",
  "idna==3.2",
  "importlib-metadata==4.6.3",
  "iso8601==0.1.16",
  "prettytable==2.1.0",
  "py-tlsh==4.7.2",
  "pycparser==2.20",
  "PyGithub==1.55",
  "PyJWT==2.1.0",
  "PyNaCl==1.4.0",
  "python-dateutil==2.8.2",
  "python-gitlab==2.10.0",
  "PyYAML==5.4.1",
  "requests==2.26.0",
  "requests-toolbelt==0.9.1",
  "six==1.16.0",
  "sortedcontainers==2.4.0",
  "SQLAlchemy==1.4.22",
  "sqlparse==0.4.1",
  "swh.model==0.0.67",
  "thoth-ssdeep==3.4",
  "typing-extensions==3.10.0.0",
  "urllib3==1.26.6",
  "vcversioner==2.16.0.0",
  "wcwidth==0.2.5",
  "xxhash==2.0.2",
  "zipp==3.5.0"
]

[project.urls]
repository = "https://github.com/eellak/gsoc2021-hashesDB"